force-app/main/default/objects/RecommandationItem__c/RecommandationItem__c.object-meta.xml
<CustomObject>
    <label>Recommandation Item</label>
    <nameField>
        <label>RecoItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommandation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>