force-app/main/default/objects/RecommandationItem__c/fields/MasterSKU__c.field-meta.xml
<CustomField>
    <fullName>MasterSKU__c</fullName>
    <label>MasterSKU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>