force-app/main/default/objects/RecommandationItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merch</fullName>
                <default>true</default>
                <label>Merch</label>
            </value>
            <value>
                <fullName>Qubit_upsell</fullName>
            </value>
            <value>
                <fullName>Qubit_engagement</fullName>
            </value>
            <value>
                <fullName>Qubit_conversion</fullName>
            </value>
            <value>
                <fullName>Qubit_trending</fullName>
            </value>
            <value>
                <fullName>Qubit_popular</fullName>
            </value>
            <value>
                <fullName>Qubit_newQubit</fullName>
            </value>
            <value>
                <fullName>OneData_similiraty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>