force-app/main/default/objects/RecommandationItem__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <label>Validity Date</label>
    <type>Date</type>
</CustomField>